done except project links

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Apps and Projects</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
             </ul>
         </div>
     </nav>
@@ -55,13 +55,15 @@
                 </div>
                 <p class="lead mb-5">I am a professional software developer with 2 years of experience in designing and
                     building full-stack applications. I have a passion for craftsmanship and I love expressing that in
-                    everything I do Projects have reduced support hours by 30%, and hosting costs by nearly 40%..</p>
+                    everything I do. Professionally, my projects have reduced support hours by 30%, and hosting costs by
+                    nearly 40%. I pride myself in flexibility, quick-learing, and always bringing my best. Feel free to
+                    reach out and connect!</p>
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/dev-man-jacob-carpenter/"><i
                             class="fab fa-linkedin-in"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                    <a class="social-icon" href="https://github.com/JakeCarp"><i class="fab fa-github"></i></a>
+                    <a class="social-icon" href="./assets/img/Jacob Carpenter Resume (2).pdf" download><i
+                            class="fas fa-file"></i></a>
                 </div>
             </div>
         </section>
@@ -72,46 +74,42 @@
                 <h2 class="mb-5">Experience</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Senior Web Developer</h3>
-                        <div class="subheading mb-3">Intelitec Solutions</div>
-                        <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of
-                            the day, going forward, a new normal that has evolved from generation X is on the runway
-                            heading towards a streamlined cloud solution. User generated content in real-time will have
-                            multiple touchpoints for offshoring.</p>
+                        <h3 class="mb-0">Contracted Software Developer</h3>
+                        <div class="subheading mb-3">Kordata Software</div>
+                        <ul>
+                            <li><span>Utilized propretary tools to build forms and workflows for clients.</span></li>
+                            <li><span>Had the opportunity to work closely with clients, acting as a consultant.</span>
+                            </li>
+                            <li><span>Worked primarily in JSON and SQL.</span></li>
+                        </ul>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">February 2021 - April 2021</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Web Developer</h3>
-                        <div class="subheading mb-3">Intelitec Solutions</div>
-                        <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test.
-                            Override the digital divide with additional clickthroughs from DevOps. Nanotechnology
-                            immersion along the information highway will close the loop on focusing solely on the bottom
-                            line.</p>
+                        <h3 class="mb-0">Software Developer</h3>
+                        <div class="subheading mb-3">LIV Inc.</div>
+                        <ul>
+                            <li><span>Designed and built a customer onboarding tool that reduced support hours by 30%.
+                                    30%.</span></li>
+                            <li><span>Worked Collaboratively with an overseas development team.</span></li>
+                            <li><span>Excellent opportunity to work with a close knit start-up environment.</span></li>
+                        </ul>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">December 2019 - December 2020</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Junior Web Designer</h3>
-                        <div class="subheading mb-3">Shout! Media Productions</div>
-                        <p>Podcasting operational change management inside of workflows to establish a framework. Taking
-                            seamless key performance indicators offline to maximise the long tail. Keeping your eye on
-                            the ball while performing a deep dive on the start-up mentality to derive convergence on
-                            cross-platform integration.</p>
+                        <h3 class="mb-0">Software Developer</h3>
+                        <div class="subheading mb-3">Kordata Software</div>
+
+                        <li><span>Small team role, responsible for the entire lifecycle of a production size
+                                application.</span></li>
+                        <li><span>Primary technologies included React.js, SQL, and C#.</span></li>
+                        <li><span>Worked on a cloud hosting migration to GCP that saved nearly 40% on hosting
+                                costs.</span></li>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">Web Design Intern</h3>
-                        <div class="subheading mb-3">Shout! Media Productions</div>
-                        <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically
-                            procrastinate B2C users after installed base benefits. Dramatically visualize customer
-                            directed convergence without revolutionary ROI.</p>
-                    </div>
-                    <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">Jun 2019 - November 2019</span></div>
                 </div>
             </div>
         </section>
@@ -120,22 +118,25 @@
         <section class="resume-section" id="education">
             <div class="resume-section-content">
                 <h2 class="mb-5">Education</h2>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">University of Colorado Boulder</h3>
-                        <div class="subheading mb-3">Bachelor of Science</div>
-                        <div>Computer Science - Web Development Track</div>
-                        <p>GPA: 3.23</p>
-                    </div>
-                    <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
-                </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">James Buchanan High School</h3>
-                        <div class="subheading mb-3">Technology Magnet Program</div>
-                        <p>GPA: 3.56</p>
+                        <h3 class="mb-0">Boise Codeworks</h3>
+                        <div class="subheading mb-3">Immersive Full Stack Software Development Bootcamp</div>
+                        <ul>
+                            <li><span>Over 500 hours of full stack development experience.</span></li>
+                            <li><span>Worked on many projects in various different roles.</span></li>
+                            <li><span>Re-attended in 2021 for a stack refresher and expanded portfolio.</span></li>
+                        </ul>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Idaho Sate University</h3>
+                        <div class="subheading mb-3">Associate of Liberal Arts</div>
+                        <div>Graduated Concurrently with high school diploma</div>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
                 </div>
             </div>
         </section>
@@ -149,29 +150,26 @@
                     <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                     <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                     <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-angular"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-vuejs"></i></li>
                     <li class="list-inline-item"><i class="fab fa-react"></i></li>
                     <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
                     <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
                     <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-bootstrap"></i></li>
                 </ul>
-                <div class="subheading mb-3">Workflow</div>
+                <div class="subheading mb-3">Also Familiar With</div>
                 <ul class="fa-ul mb-0">
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Mobile-First, Responsive Design
+                        <span class="fa-li"><i class="fas fa-code"></i></span>
+                        C# .NET Core
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Cross Browser Testing & Debugging
+                        <span class="fa-li"><i class="fas fa-database"></i></span>
+                        Mongoose, mongoDB, SQL, Postgres
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Cross Functional Teams
+                        <span class="fa-li"><i class="fas fa-code-branch"></i></span>
+                        Git, Atlassian, Bitbucket
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -181,63 +179,64 @@
             </div>
         </section>
         <hr class="m-0" />
+        <!-- Awards-->
+        <section class="resume-section" id="awards">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Apps and Projects</h2>
+                <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active"
+                            aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./assets/img/download (1).jfif" class="d-block w-100 h-40" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Good Ol' Days</h5>
+                                <p>A family focused image sharing social media</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/img/chicken.png" class="d-block w-100 h-40" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Randy Carpenter Memorial Foundation</h5>
+                                <p>A modernization of a charity web-app</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/img/download.jfif" class="d-block w-100 h-40" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>D-Patch</h5>
+                                <p>A orginization App for fire and EMS dispatchers</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+        <hr class="m-0" />
         <!-- Interests-->
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
                 <h2 class="mb-5">Interests</h2>
-                <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid
-                    skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking,
-                    free climbing, and kayaking.</p>
-                <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television
-                    shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest
-                    technology advancements in the front-end web development world.</p>
-            </div>
-        </section>
-        <hr class="m-0" />
-        <!-- Awards-->
-        <section class="resume-section" id="awards">
-            <div class="resume-section-content">
-                <h2 class="mb-5">Awards & Certifications</h2>
-                <ul class="fa-ul mb-0">
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        Google Analytics Certified Developer
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        Mobile Web Specialist - Google Certification
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        1
-                        <sup>st</sup>
-                        Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        1
-                        <sup>st</sup>
-                        Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        2
-                        <sup>nd</sup>
-                        Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        1
-                        <sup>st</sup>
-                        Place - James Buchanan High School - Hackathon 2006
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        3
-                        <sup>rd</sup>
-                        Place - James Buchanan High School - Hackathon 2005
-                    </li>
-                </ul>
+                <p>Apart from being a web developer, I enjoy a number of other creative hobbies. My absolute favorite is
+                    forging. On the weekends I do my best to find a spot where I can light up my forge and make
+                    something new. Recently too I've taken a interest in robotics and I'm starting to experiment with
+                    that in my free time as well.</p>
+                <p class="mb-0">Otherwise though, I also enjoy playing some video games, I am an avid reader, and I
+                    always try to spend some time with my friends each week.</p>
             </div>
         </section>
     </div>
