--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">Jacob Carpenter</span>
             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
-                    src="assets/img/profile.jpg" alt="..." /></span>
+                    src="assets/img/IMG_9874-2.jpg" alt="..." /></span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
@@ -183,46 +183,19 @@
         <section class="resume-section" id="awards">
             <div class="resume-section-content">
                 <h2 class="mb-5">Apps and Projects</h2>
-                <div id="carousel" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active"
-                            aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
+                <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0"> <a href=""> Good Ol' Days</a></h3>
+                        <div class="subheading mb-3">A Family Focused Photo Sharing App</div>
+                        <ul>
+                            <li><span>I took on the role of the product owner, leading a team of 4 developers.</span>
+                            </li>
+                            <li><span>Built using Google Firebase </span></li>
+                            <li><span>Technologies included Vue.js, Node.js, mongoDB, and various javascript
+                                    libraries.</span></li>
+                        </ul>
                     </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="./assets/img/download (1).jfif" class="d-block w-100 h-40" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Good Ol' Days</h5>
-                                <p>A family focused image sharing social media</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./assets/img/chicken.png" class="d-block w-100 h-40" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Randy Carpenter Memorial Foundation</h5>
-                                <p>A modernization of a charity web-app</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./assets/img/download.jfif" class="d-block w-100 h-40" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>D-Patch</h5>
-                                <p>A orginization App for fire and EMS dispatchers</p>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
+                    <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
                 </div>
             </div>
         </section>
