--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 </div>
                 <p class="lead mb-5">I am a professional software developer with 2 years of experience in designing and
                     building full-stack applications. I have a passion for craftsmanship and I love expressing that in
-                    everything I do. Professionally, my projects have reduced support hours by 30%, and hosting costs by
-                    nearly 40%. I pride myself in flexibility, quick-learing, and always bringing my best. Feel free to
+                    everything I do. Professionally, my projects have reduced hosting costs by 30%, and support hours
+                    drastically. I pride myself in flexibility, quick-learing, and always bringing my best. Feel free to
                     reach out and connect!</p>
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/dev-man-jacob-carpenter/"><i
@@ -90,10 +90,11 @@
                         <h3 class="mb-0">Software Developer</h3>
                         <div class="subheading mb-3">LIV Inc.</div>
                         <ul>
-                            <li><span>Designed and built a customer onboarding tool that reduced support hours by 30%.
-                                    30%.</span></li>
+                            <li><span>Designed and built a customer onboarding tool.</span></li>
                             <li><span>Worked Collaboratively with an overseas development team.</span></li>
                             <li><span>Excellent opportunity to work with a close knit start-up environment.</span></li>
+                            <li><span>My position here took on a more consultative role over time, and I got the
+                                    opportunity to work directly with clients.</span></li>
                         </ul>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">December 2019 - December 2020</span></div>
@@ -185,7 +186,7 @@
                 <h2 class="mb-5">Apps and Projects</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0"> <a href=""> Good Ol' Days</a></h3>
+                        <h3 class="mb-0"> <a href="htts://good-ol-days.herokuapp.com"> Good Ol' Days</a></h3>
                         <div class="subheading mb-3">A Family Focused Photo Sharing App</div>
                         <ul>
                             <li><span>I took on the role of the product owner, leading a team of 4 developers.</span>
@@ -193,6 +194,17 @@
                             <li><span>Built using Google Firebase </span></li>
                             <li><span>Technologies included Vue.js, Node.js, mongoDB, and various javascript
                                     libraries.</span></li>
+                        </ul>
+                    </div>
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0"> <a href="htts://villainism.herokuapp.com">Villainism</a></h3>
+                        <div class="subheading mb-3">A KanBan Board for Gotham's Villainy</div>
+                        <ul>
+                            <li><span>Developed along with a partner developer, pair programming nearly all of
+                                    it.</span>
+                            </li>
+                            <li><span>Technologies included Vue.js, Node.js, using a mongoose data base and a several UI
+                                    element libraries.</span></li>
                         </ul>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
