--- a/index.html
+++ b/index.html
@@ -183,10 +183,12 @@
         <!-- Awards-->
         <section class="resume-section" id="awards">
             <div class="resume-section-content">
-                <h2 class="mb-5">Apps and Projects</h2>
+                <h2 class="mb-5">Apps</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0"> <a href="htts://good-ol-days.herokuapp.com"> Good Ol' Days</a></h3>
+                        <h3 class="mb-0"> <a href="https://good-ol-days.herokuapp.com" target="_blank"> Good Ol'
+                                Days</a>
+                        </h3>
                         <div class="subheading mb-3">A Family Focused Photo Sharing App</div>
                         <ul>
                             <li><span>I took on the role of the product owner, leading a team of 4 developers.</span>
@@ -197,7 +199,7 @@
                         </ul>
                     </div>
                     <div class="flex-grow-1">
-                        <h3 class="mb-0"> <a href="htts://villainism.herokuapp.com">Villainism</a></h3>
+                        <h3 class="mb-0"> <a href="https://villainism.herokuapp.com" target="_blank">Villainism</a></h3>
                         <div class="subheading mb-3">A KanBan Board for Gotham's Villainy</div>
                         <ul>
                             <li><span>Developed along with a partner developer, pair programming nearly all of
@@ -207,7 +209,6 @@
                                     element libraries.</span></li>
                         </ul>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
                 </div>
             </div>
         </section>
