--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-database"></i></span>
-                        Mongoose, mongoDB, SQL, Postgres
+                        Mongoose, mongoDB, SQL, Postgres, DapperORM
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-code-branch"></i></span>
