--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Apps and Projects</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Apps</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
             </ul>
         </div>
@@ -62,7 +62,7 @@
                     <a class="social-icon" href="https://www.linkedin.com/in/dev-man-jacob-carpenter/"><i
                             class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://github.com/JakeCarp"><i class="fab fa-github"></i></a>
-                    <a class="social-icon" href="./assets/img/Jacob Carpenter Resume (4).pdf" download><i
+                    <a class="social-icon" href="./assets/img/Jacob Carpenter Resume (6).pdf" download><i
                             class="fas fa-file"></i></a>
                 </div>
             </div>
@@ -196,6 +196,19 @@
                             <li><span>Built using Google Firebase </span></li>
                             <li><span>Technologies included Vue.js, Node.js, mongoDB, and various javascript
                                     libraries.</span></li>
+                        </ul>
+                    </div>
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0"> D-Patch
+                        </h3>
+                        <div class="subheading mb-3">An Orginization App for Dispatchers</div>
+                        <ul>
+                            <li><span>This App was developed with a partner, for the benefit of the Nampa Fire
+                                    Dispatchers.</span>
+                            </li>
+                            <li><span>Built using Vue.js, Node.js, and MongoDB.</span></li>
+                            <li><span>We consulted with the end users of this app several times to really hone what it
+                                    was that they needed.</span></li>
                         </ul>
                     </div>
                     <div class="flex-grow-1">
